<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".FirebaseToGoogleMapActivity">

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_text_latitude"
        android:layout_alignParentStart="true"
        android:hint="@string/name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_text_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_text_longitude"
        android:layout_alignParentStart="true"
        android:hint="@string/latitude"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_text_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_save"
        android:layout_alignParentStart="true"
        android:hint="@string/longitude"
        android:inputType="text"/>

    <Button
        android:id="@+id/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="172dp"
        android:text="Return" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_proceed"
        android:layout_alignParentStart="true"
        android:text="@string/save" />

    <Button
        android:id="@+id/btn_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="233dp"
        android:text="@string/proceed" />


</RelativeLayout>