<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFE00"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewLoginHere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_here"
            android:textAlignment="center"
            android:layout_marginTop="150dp"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/editEmailAddress"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text_bg"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:layout_marginTop="250dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="300dp"
            android:layout_centerHorizontal="true"
            android:text="@string/Login" />

        <TextView
            android:id="@+id/textViewNotRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_register_yet_click_here_for_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="360dp"
            android:clickable="true"
            android:focusable="true"
            android:textSize="12sp"/>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>