<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFE00"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textviewFill"
            android:layout_width="310dp"
            android:layout_height="18.5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/please_fill_in_requirement_profile_information"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imageProUpdate"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/profilepic"
            android:contentDescription="@string/Todol"
            android:fitsSystemWindows="true" />

        <TextView
            android:id="@+id/textUploadProfile"
            android:layout_width="120dp"
            android:layout_height="16dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="187dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/upload_profile_picture"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editUserNameUpdate"
            android:layout_width="247.5dp"
            android:layout_height="41.5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="242dp"
            android:background="@drawable/custom_edit_text_bg"
            android:fontFamily="@font/roboto"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editEmailAddressUpdate"
            android:layout_width="247.5dp"
            android:layout_height="41.5dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="215dp"
            android:background="@drawable/custom_edit_text_bg"
            android:fontFamily="@font/roboto"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="90dp"
            android:layout_height="41.5dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/editUserNameUpdate"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="118dp"
            android:background="#000000"
            android:fontFamily="@font/roboto"
            android:shadowColor="@android:color/darker_gray"
            android:text="@string/update"
            android:textAlignment="center"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="90dp"
            android:layout_height="41.5dp"
            android:layout_alignEnd="@+id/editUserNameUpdate"
            android:layout_alignTop="@+id/buttonUpdate"
            android:textColor="#ffffff"
            android:background="#000000"
            android:text="@string/clear" />

    </RelativeLayout>

    <View
        android:id="@+id/viewbotBg"
        android:layout_width="match_parent"
        android:layout_height="18.96dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/tamukubot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>