<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFE00"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textviewFill"
            android:layout_width="310dp"
            android:layout_height="18.5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/please_fill_in_requirement_profile_information"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageProfileUpdate"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/profilepic"
            android:clickable="true"
            android:contentDescription="@string/Todol"
            android:fitsSystemWindows="true"
            android:focusable="true"
            app:civ_border_width="1dp"
            app:civ_border_color="#000"/>


        <TextView
            android:id="@+id/textUploadProfile"
            android:layout_width="120dp"
            android:layout_height="16dp"
            android:layout_below="@+id/imageProfileUpdate"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_light"
            android:text="@string/upload_profile_picture"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editUserName"
            android:layout_width="247.5dp"
            android:layout_height="41.5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="225dp"
            android:background="@drawable/custom_edit_text_bg"
            android:fontFamily="@font/roboto"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editEmailAddress"
            android:layout_width="247.5dp"
            android:layout_height="41.5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="280dp"
            android:background="@drawable/custom_edit_text_bg"
            android:fontFamily="@font/roboto"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="247.5dp"
            android:layout_height="41.5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="335dp"
            android:background="@drawable/custom_edit_text_bg"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="247.5dp"
            android:layout_height="41.5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="390dp"
            android:background="@drawable/custom_edit_text_bg"
            android:fontFamily="@font/roboto"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="90dp"
            android:layout_height="41.5dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="54dp"
            android:background="#000000"
            android:fontFamily="@font/roboto"
            android:shadowColor="@android:color/darker_gray"
            android:text="@string/_continue"
            android:textAlignment="center"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <View
        android:id="@+id/viewbotBg"
        android:layout_width="match_parent"
        android:layout_height="18.96dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/tamukubot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>